# claude-code-harness

./: pyproject.toml  railway.toml
.claude/: settings.json
data/: calculator_settings.json  cutting_config.json  orders.json  pricing_config.json
memory/: LATEST_CONTEXT.md
memory/sessions/: 2026-02-15_v2-ui-deploy.md
src/: main.py
src/api/: deps.py
src/api/v1/: router.py
src/api/v1/endpoints/: __init__.py  admin.py  image.py  order.py
src/domain/calculator/: __init__.py  cutting_line_generator.py  rembg_service.py  schemas.py  service.py  shape_analyzer.py  shape_pricing.py
src/domain/order/: __init__.py  repository.py  schemas.py  service.py
src/domain/settings/: repository.py
src/static/: manifest-admin.json  manifest.json  sw.js
src/static/css/: style.css
src/static/js/: polygon-drawer.js
src/templates/: base.html  calculator.html  food_menu.html  home.html
src/templates/admin/: dashboard.html  login.html  order_detail.html  orders.html  settings.html
src/templates/calculators/: aluminum.html  birchwood.html
src/templates/partials/: cutting_preview.html  error.html  image_ratio.html  order_success.html  result.html  shape_result.html
