[project]
name = "claude-code-harness"
version = "2.0.0"
description = "서블리원 아크릴 주문제작 신청시트"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.22",
    "pillow>=12.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
]
